Developed a part for frontend to render data from the reviews object
